# sshcld

./: CHANGELOG.md  LICENSE  README.md  setup.cfg  setup.py  test.txt
.github/workflows/: publish-new-release.yml  pull-request-tests.yml
sshcld/: cli.py  errors.py  plugin_aws.py  sshcld.py  sshcld.yaml
sshcld/plugins/: aws.py
tests/: Dockerfile  conftest.py  entrypoint.sh  requirements.txt  sshcld_default.yaml  sshcld_minimal.yaml  sshcld_user.yaml  test_aws_0_general.py  test_aws_1_filters.py  test_aws_general.py  test_aws_no_filters.py  test_cli.py
