[metadata]
name = sshcld
version = 0.0.1
author = Sergey Trukhin
author_email = satruhin@gmail.com
home-page = https://github.com/sergey-trukhin/sshcld
description = attr: sshcld.__doc__
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords = SSH, cloud, AWS
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Systems Administration
    Operating System :: OS Independent

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.5
package_dir =
    numeral_system=sshcld
    tests=tests
packages = find:
test_suite = tests
setup_requires =
	setuptools >=30.3.0     # minimal version for `setup.cfg`
install_requires =
    boto3
    botocore
    PyYAML
    tabulate

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
  sshcld = sshcld.cli:show_instances

[options.package_data]
sshcld = sshcld.yaml

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

[sdist]
formats = gztar

[flake8]
exclude = .git,venv
max-line-length = 120
count = True

[pylint.MASTER]
max-line-length = 120
ignore = .git,venv
recursive = True